apps/media-server/wizarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wizarr
  namespace: media-server
spec:
  ports:
    - port: 5690
      targetPort: 5690
      protocol: TCP
  selector:
    app: wizarr
  type: ClusterIP
